--- a/ShopTARge24/ShopTARge24/Views/Spaceships/CreateUpdate.cshtml
+++ b/ShopTARge24/ShopTARge24/Views/Spaceships/CreateUpdate.cshtml
@@ -51,6 +51,20 @@ else
             </div>
         </div>
 
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class=custom-file">
+                    <input class="form-control" asp-for="Files" multiple type="file" />
+                </div>
+            </div>
+        </div>
+
+        @foreach (var images in Model.Files)
+        {
+            <partial name="_Files" model="images"></partial>
+        }
+
         @if (Model.Id.HasValue)
         {
             <input asp-action="update" asp-controller="spaceships" type="submit" class="btn btn-success" value="Update" />
