--- a/ShopTARge24/ShopTARge24/Views/Spaceships/CreateUpdate.cshtml
+++ b/ShopTARge24/ShopTARge24/Views/Spaceships/CreateUpdate.cshtml
@@ -60,9 +60,9 @@ else
             </div>
         </div>
 
-        @foreach (var images in Model.Files)
+        @foreach (var images in Model.Image)
         {
-            <partial name="_Files" model="images"></partial>
+            <partial name="_Images" model="images" />
         }
 
         @if (Model.Id.HasValue)
